# nakuritycore

./: .gitignore  LICENSE  README.md  test.py
.github/workflows/: publish.yaml
dev/: README.md
dev/nakuritydev/: guardy.py
docs/: Nakurity Class Usage.md  Versioning.md
docs/Basic Uiltity/: example.pyproject.toml
docs/Basic Uiltity/PyProject/: example.github-workflow.yaml  notes.pyproject.toml.md
src/: README.md
src/python/: pyproject.toml  requirements.txt
src/python/caller/: bin.js
src/python/core/: requirement.py
src/python/nakuritycore/core/: __init__.py  __main__.py  devy.py  nakuly.py  nakurity.py  requirement.py
src/python/nakuritycore/data/config/: tracer.py
src/python/nakuritycore/utils/: tracer.py
src/python/utils/: tracer.py
